added test cases for puzzle solutions, more types

--- a/scratchpad.ipynb
+++ b/scratchpad.ipynb
@@ -222,11 +222,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Tristram', 'AlphaCentauri', 'Snowdin', 'Tambi'),\n",
+       " ('Tristram', 'AlphaCentauri', 'Snowdin', 'Faerun'),\n",
+       " ('Tristram', 'AlphaCentauri', 'Snowdin', 'Norrath'),\n",
+       " ('Tristram', 'AlphaCentauri', 'Snowdin', 'Straylight'),\n",
+       " ('Tristram', 'AlphaCentauri', 'Snowdin', 'Arbre'),\n",
+       " ('Tristram', 'AlphaCentauri', 'Tambi', 'Faerun'),\n",
+       " ('Tristram', 'AlphaCentauri', 'Tambi', 'Norrath'),\n",
+       " ('Tristram', 'AlphaCentauri', 'Tambi', 'Straylight'),\n",
+       " ('Tristram', 'AlphaCentauri', 'Tambi', 'Arbre'),\n",
+       " ('Tristram', 'AlphaCentauri', 'Faerun', 'Norrath'),\n",
+       " ('Tristram', 'AlphaCentauri', 'Faerun', 'Straylight'),\n",
+       " ('Tristram', 'AlphaCentauri', 'Faerun', 'Arbre'),\n",
+       " ('Tristram', 'AlphaCentauri', 'Norrath', 'Straylight'),\n",
+       " ('Tristram', 'AlphaCentauri', 'Norrath', 'Arbre'),\n",
+       " ('Tristram', 'AlphaCentauri', 'Straylight', 'Arbre'),\n",
+       " ('Tristram', 'Snowdin', 'Tambi', 'Faerun'),\n",
+       " ('Tristram', 'Snowdin', 'Tambi', 'Norrath'),\n",
+       " ('Tristram', 'Snowdin', 'Tambi', 'Straylight'),\n",
+       " ('Tristram', 'Snowdin', 'Tambi', 'Arbre'),\n",
+       " ('Tristram', 'Snowdin', 'Faerun', 'Norrath'),\n",
+       " ('Tristram', 'Snowdin', 'Faerun', 'Straylight'),\n",
+       " ('Tristram', 'Snowdin', 'Faerun', 'Arbre'),\n",
+       " ('Tristram', 'Snowdin', 'Norrath', 'Straylight'),\n",
+       " ('Tristram', 'Snowdin', 'Norrath', 'Arbre'),\n",
+       " ('Tristram', 'Snowdin', 'Straylight', 'Arbre'),\n",
+       " ('Tristram', 'Tambi', 'Faerun', 'Norrath'),\n",
+       " ('Tristram', 'Tambi', 'Faerun', 'Straylight'),\n",
+       " ('Tristram', 'Tambi', 'Faerun', 'Arbre'),\n",
+       " ('Tristram', 'Tambi', 'Norrath', 'Straylight'),\n",
+       " ('Tristram', 'Tambi', 'Norrath', 'Arbre'),\n",
+       " ('Tristram', 'Tambi', 'Straylight', 'Arbre'),\n",
+       " ('Tristram', 'Faerun', 'Norrath', 'Straylight'),\n",
+       " ('Tristram', 'Faerun', 'Norrath', 'Arbre'),\n",
+       " ('Tristram', 'Faerun', 'Straylight', 'Arbre'),\n",
+       " ('Tristram', 'Norrath', 'Straylight', 'Arbre'),\n",
+       " ('AlphaCentauri', 'Snowdin', 'Tambi', 'Faerun'),\n",
+       " ('AlphaCentauri', 'Snowdin', 'Tambi', 'Norrath'),\n",
+       " ('AlphaCentauri', 'Snowdin', 'Tambi', 'Straylight'),\n",
+       " ('AlphaCentauri', 'Snowdin', 'Tambi', 'Arbre'),\n",
+       " ('AlphaCentauri', 'Snowdin', 'Faerun', 'Norrath'),\n",
+       " ('AlphaCentauri', 'Snowdin', 'Faerun', 'Straylight'),\n",
+       " ('AlphaCentauri', 'Snowdin', 'Faerun', 'Arbre'),\n",
+       " ('AlphaCentauri', 'Snowdin', 'Norrath', 'Straylight'),\n",
+       " ('AlphaCentauri', 'Snowdin', 'Norrath', 'Arbre'),\n",
+       " ('AlphaCentauri', 'Snowdin', 'Straylight', 'Arbre'),\n",
+       " ('AlphaCentauri', 'Tambi', 'Faerun', 'Norrath'),\n",
+       " ('AlphaCentauri', 'Tambi', 'Faerun', 'Straylight'),\n",
+       " ('AlphaCentauri', 'Tambi', 'Faerun', 'Arbre'),\n",
+       " ('AlphaCentauri', 'Tambi', 'Norrath', 'Straylight'),\n",
+       " ('AlphaCentauri', 'Tambi', 'Norrath', 'Arbre'),\n",
+       " ('AlphaCentauri', 'Tambi', 'Straylight', 'Arbre'),\n",
+       " ('AlphaCentauri', 'Faerun', 'Norrath', 'Straylight'),\n",
+       " ('AlphaCentauri', 'Faerun', 'Norrath', 'Arbre'),\n",
+       " ('AlphaCentauri', 'Faerun', 'Straylight', 'Arbre'),\n",
+       " ('AlphaCentauri', 'Norrath', 'Straylight', 'Arbre'),\n",
+       " ('Snowdin', 'Tambi', 'Faerun', 'Norrath'),\n",
+       " ('Snowdin', 'Tambi', 'Faerun', 'Straylight'),\n",
+       " ('Snowdin', 'Tambi', 'Faerun', 'Arbre'),\n",
+       " ('Snowdin', 'Tambi', 'Norrath', 'Straylight'),\n",
+       " ('Snowdin', 'Tambi', 'Norrath', 'Arbre'),\n",
+       " ('Snowdin', 'Tambi', 'Straylight', 'Arbre'),\n",
+       " ('Snowdin', 'Faerun', 'Norrath', 'Straylight'),\n",
+       " ('Snowdin', 'Faerun', 'Norrath', 'Arbre'),\n",
+       " ('Snowdin', 'Faerun', 'Straylight', 'Arbre'),\n",
+       " ('Snowdin', 'Norrath', 'Straylight', 'Arbre'),\n",
+       " ('Tambi', 'Faerun', 'Norrath', 'Straylight'),\n",
+       " ('Tambi', 'Faerun', 'Norrath', 'Arbre'),\n",
+       " ('Tambi', 'Faerun', 'Straylight', 'Arbre'),\n",
+       " ('Tambi', 'Norrath', 'Straylight', 'Arbre'),\n",
+       " ('Faerun', 'Norrath', 'Straylight', 'Arbre')]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "x = itertools.permutations(stops)"
+    "x = itertools.combinations(stops, 4)\n",
+    "list(x)"
    ]
   },
   {
@@ -272,13 +353,6 @@
    "source": [
     "max(journeys.values())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
