added better comments, code cleanup throughout

--- a/input_2016/day14.ipynb
+++ b/input_2016/day14.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pprint, hashlib, re\n",
     "\n",
-    "salt = 'abc'\n",
-    "# salt = 'zpqevtbw'\n",
+    "# salt = 'abc'\n",
+    "salt = 'zpqevtbw'\n",
     "h = '0123456789abcdef'\n",
     "quints = {k: {} for k in h}\n",
     "triples = {k: {} for k in h}\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,22 +75,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "22728"
+       "22423"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "check_keys(gen_hash)"
+    "check_keys(stretch_hash)"
    ]
   },
   {
@@ -98,44 +98,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def re_hash(hashes):\n",
-    "    for n in hashes:\n",
-    "        t = re.search(r'([a-f0-9])\\1\\1', hashes[n])\n",
-    "        if t:\n",
-    "            triples[t.group()[0]][n] = hashes[n]\n",
-    "\n",
-    "        q = re.search(r'([a-f0-9])\\1\\1\\1\\1', hashes[n])\n",
-    "        if q:\n",
-    "            quints[q.group()[0]][n] = hashes[n]\n",
-    "\n",
-    "def valid_keys():\n",
-    "    for k in quints:\n",
-    "        qvals = quints[k]\n",
-    "        tvals = triples[k]\n",
-    "        for q in qvals:\n",
-    "            for t in tvals:\n",
-    "                if q in range(t+1, t+1001):\n",
-    "                    keys[t] = tvals[t]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(keys)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sorted(list(keys.keys()))[63]"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -154,7 +117,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
