--- a/input_2016/day21.ipynb
+++ b/input_2016/day21.ipynb
@@ -2,17 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import copy\n",
-    "import hashlib\n",
-    "import re\n",
-    "import string\n",
-    "#from typing import Dict, List, Optional, Union\n",
     "import itertools\n",
-    "import numpy as np\n",
     "\n",
     "def input(filename: str):\n",
     "    with open(filename, 'r') as input:\n",
@@ -23,12 +17,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pw = 'abcde'\n",
-    "\n",
+    "# pw = 'abcde'\n",
+    "pw = 'abcdefgh'\n",
     "commands = input('day21.txt')\n",
     "# commands = ['swap position 4 with position 0',\n",
     "#            'swap letter d with letter b',\n",
@@ -42,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,12 +77,10 @@
     "                if i >= 5:\n",
     "                    i += 1\n",
     "                i = i % len(letters)\n",
-    "    #             print(index)\n",
     "                newtext = rotate(-i, letters)\n",
     "\n",
     "        if c[0] == 'reverse':\n",
     "            ss = letters[int(x):int(y) + 1]\n",
-    "            #ss.reverse()\n",
     "            newtext[int(x):int(y) + 1] = ss[::-1]\n",
     "\n",
     "        if c[0] == 'move':\n",
@@ -98,14 +90,13 @@
     "\n",
     "\n",
     "        letters = newtext\n",
-    "#         print(letters)\n",
     "        \n",
     "    return ''.join(letters)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -114,38 +105,27 @@
        "'bdfhgeca'"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "scramble('abcdefgh')"
+    "scramble(pw)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<itertools.permutations at 0x10f6b3b48>"
-      ]
-     },
-     "execution_count": 83,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pws = itertools.permutations('abcdefgh')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
