--- a/input_2016/day22.ipynb
+++ b/input_2016/day22.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
        "/dev/grid/node-x0-y4    85    73     12    85"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,12 +108,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['Cap'] = df.Used.apply(str) + ' / ' + df.Size.apply(str)"
+    "# TODO make this faster?\n",
+    "import itertools\n",
+    "\n",
+    "i = 0\n",
+    "for (x, y) in itertools.permutations(range(len(df)), 2):\n",
+    "    if df.iloc[y].Used > 0 and df.iloc[y].Used <= df.iloc[x].Avail:\n",
+    "        i += 1\n",
+    "\n",
+    "print(i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,12 +137,12 @@
     "df['Symbol'] = s(df.Used, df.Size)\n",
     "\n",
     "maze = np.array(df.Symbol)\n",
-    "maze.shape = (25, int(875/25))"
+    "maze.shape = (25, int(len(df)/25))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -173,149 +181,6 @@
     "for i in maze:\n",
     "    print(' '.join(i))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ZMQInteractiveShell options\n",
-      "-------------------------\n",
-      "ZMQInteractiveShell.ast_node_interactivity=<Enum>\n",
-      "    Current: 'last_expr'\n",
-      "    Choices: ['all', 'last', 'last_expr', 'none', 'last_expr_or_assign']\n",
-      "    'all', 'last', 'last_expr' or 'none', 'last_expr_or_assign' specifying which\n",
-      "    nodes should be run interactively (displaying output from expressions).\n",
-      "ZMQInteractiveShell.ast_transformers=<List>\n",
-      "    Current: []\n",
-      "    A list of ast.NodeTransformer subclass instances, which will be applied to\n",
-      "    user input before code is run.\n",
-      "ZMQInteractiveShell.autoawait=<Bool>\n",
-      "    Current: True\n",
-      "    Automatically run await statement in the top level repl.\n",
-      "ZMQInteractiveShell.autocall=<Enum>\n",
-      "    Current: 0\n",
-      "    Choices: (0, 1, 2)\n",
-      "    Make IPython automatically call any callable object even if you didn't type\n",
-      "    explicit parentheses. For example, 'str 43' becomes 'str(43)' automatically.\n",
-      "    The value can be '0' to disable the feature, '1' for 'smart' autocall, where\n",
-      "    it is not applied if there are no more arguments on the line, and '2' for\n",
-      "    'full' autocall, where all callable objects are automatically called (even\n",
-      "    if no arguments are present).\n",
-      "ZMQInteractiveShell.automagic=<Bool>\n",
-      "    Current: True\n",
-      "    Enable magic commands to be called without the leading %.\n",
-      "ZMQInteractiveShell.banner1=<Unicode>\n",
-      "    Current: \"Python 3.6.9 (default, Jul  5 2019, 22:56:31) \\nType 'copyright', 'credits' or 'license' for more information\\nIPython 7.5.0 -- An enhanced Interactive Python. Type '?' for help.\\n\"\n",
-      "    The part of the banner to be printed before the profile\n",
-      "ZMQInteractiveShell.banner2=<Unicode>\n",
-      "    Current: ''\n",
-      "    The part of the banner to be printed after the profile\n",
-      "ZMQInteractiveShell.cache_size=<Int>\n",
-      "    Current: 1000\n",
-      "    Set the size of the output cache.  The default is 1000, you can change it\n",
-      "    permanently in your config file.  Setting it to 0 completely disables the\n",
-      "    caching system, and the minimum value accepted is 3 (if you provide a value\n",
-      "    less than 3, it is reset to 0 and a warning is issued).  This limit is\n",
-      "    defined because otherwise you'll spend more time re-flushing a too small\n",
-      "    cache than working\n",
-      "ZMQInteractiveShell.color_info=<Bool>\n",
-      "    Current: True\n",
-      "    Use colors for displaying information about objects. Because this\n",
-      "    information is passed through a pager (like 'less'), and some pagers get\n",
-      "    confused with color codes, this capability can be turned off.\n",
-      "ZMQInteractiveShell.colors=<CaselessStrEnum>\n",
-      "    Current: 'Neutral'\n",
-      "    Choices: ['Neutral', 'NoColor', 'LightBG', 'Linux']\n",
-      "    Set the color scheme (NoColor, Neutral, Linux, or LightBG).\n",
-      "ZMQInteractiveShell.debug=<Bool>\n",
-      "    Current: False\n",
-      "ZMQInteractiveShell.disable_failing_post_execute=<Bool>\n",
-      "    Current: False\n",
-      "    Don't call post-execute functions that have failed in the past.\n",
-      "ZMQInteractiveShell.display_page=<Bool>\n",
-      "    Current: False\n",
-      "    If True, anything that would be passed to the pager will be displayed as\n",
-      "    regular output instead.\n",
-      "ZMQInteractiveShell.enable_html_pager=<Bool>\n",
-      "    Current: False\n",
-      "    (Provisional API) enables html representation in mime bundles sent to\n",
-      "    pagers.\n",
-      "ZMQInteractiveShell.history_length=<Int>\n",
-      "    Current: 10000\n",
-      "    Total length of command history\n",
-      "ZMQInteractiveShell.history_load_length=<Int>\n",
-      "    Current: 1000\n",
-      "    The number of saved history entries to be loaded into the history buffer at\n",
-      "    startup.\n",
-      "ZMQInteractiveShell.ipython_dir=<Unicode>\n",
-      "    Current: '/Users/christalee/.ipython'\n",
-      "ZMQInteractiveShell.logappend=<Unicode>\n",
-      "    Current: ''\n",
-      "    Start logging to the given file in append mode. Use `logfile` to specify a\n",
-      "    log file to **overwrite** logs to.\n",
-      "ZMQInteractiveShell.logfile=<Unicode>\n",
-      "    Current: ''\n",
-      "    The name of the logfile to use.\n",
-      "ZMQInteractiveShell.logstart=<Bool>\n",
-      "    Current: False\n",
-      "    Start logging to the default log file in overwrite mode. Use `logappend` to\n",
-      "    specify a log file to **append** logs to.\n",
-      "ZMQInteractiveShell.loop_runner=<Any>\n",
-      "    Current: <IPython.core.async_helpers._AsyncIORunner object at 0x10cf4bb38>\n",
-      "    Select the loop runner that will be used to execute top-level asynchronous\n",
-      "    code\n",
-      "ZMQInteractiveShell.object_info_string_level=<Enum>\n",
-      "    Current: 0\n",
-      "    Choices: (0, 1, 2)\n",
-      "ZMQInteractiveShell.pdb=<Bool>\n",
-      "    Current: False\n",
-      "    Automatically call the pdb debugger after every exception.\n",
-      "ZMQInteractiveShell.prompt_in1=<Unicode>\n",
-      "    Current: 'In [\\\\#]: '\n",
-      "    Deprecated since IPython 4.0 and ignored since 5.0, set\n",
-      "    TerminalInteractiveShell.prompts object directly.\n",
-      "ZMQInteractiveShell.prompt_in2=<Unicode>\n",
-      "    Current: '   .\\\\D.: '\n",
-      "    Deprecated since IPython 4.0 and ignored since 5.0, set\n",
-      "    TerminalInteractiveShell.prompts object directly.\n",
-      "ZMQInteractiveShell.prompt_out=<Unicode>\n",
-      "    Current: 'Out[\\\\#]: '\n",
-      "    Deprecated since IPython 4.0 and ignored since 5.0, set\n",
-      "    TerminalInteractiveShell.prompts object directly.\n",
-      "ZMQInteractiveShell.prompts_pad_left=<Bool>\n",
-      "    Current: True\n",
-      "    Deprecated since IPython 4.0 and ignored since 5.0, set\n",
-      "    TerminalInteractiveShell.prompts object directly.\n",
-      "ZMQInteractiveShell.quiet=<Bool>\n",
-      "    Current: False\n",
-      "ZMQInteractiveShell.separate_in=<SeparateUnicode>\n",
-      "    Current: '\\n'\n",
-      "ZMQInteractiveShell.separate_out=<SeparateUnicode>\n",
-      "    Current: ''\n",
-      "ZMQInteractiveShell.separate_out2=<SeparateUnicode>\n",
-      "    Current: ''\n",
-      "ZMQInteractiveShell.show_rewritten_input=<Bool>\n",
-      "    Current: True\n",
-      "    Show rewritten input, e.g. for autocall.\n",
-      "ZMQInteractiveShell.sphinxify_docstring=<Bool>\n",
-      "    Current: False\n",
-      "    Enables rich html representation of docstrings. (This requires the docrepr\n",
-      "    module).\n",
-      "ZMQInteractiveShell.wildcards_case_sensitive=<Bool>\n",
-      "    Current: True\n",
-      "ZMQInteractiveShell.xmode=<CaselessStrEnum>\n",
-      "    Current: 'Context'\n",
-      "    Choices: ['Context', 'Plain', 'Verbose', 'Minimal']\n",
-      "    Switch modes for the IPython exception handlers.\n"
-     ]
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
