--- a/input_2016/day23.ipynb
+++ b/input_2016/day23.ipynb
@@ -19,7 +19,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p1 = {'a': 8, 'b': 0, 'c': 0, 'd': 0}\n",
     "# commands = [\"cpy 2 a\",\"tgl a\",\"tgl a\",\"tgl a\",\"cpy 1 a\",\"dec a\",\"dec a\"]\n",
     "commands = input('day23.txt')"
    ]
@@ -35,7 +34,13 @@
     "# 'inc x' increases the value of register x by one.\n",
     "# 'dec x' decreases the value of register x by one.\n",
     "# 'jnz x y' jumps to an instruction y away (positive means forward; negative means backward), but only if x is not zero.\n",
-    "\n",
+    "# 'tgl x' jumps to an instruction y away (positive means forward; negative means backward) and flips it thusly:\n",
+    "    # - 'inc' becomes 'dec'\n",
+    "    # - 'dec' and 'tgl' become 'inc'\n",
+    "    # - 'jnz' becomes 'cpy'\n",
+    "    # - 'cpy' becomes 'jnz'\n",
+    "# Arguments are unchanged after 'tgl'; ignore commands that are invalid after 'tgl' and attempts to 'tgl' commands beyond the end of the program; \n",
+    "# Always move to the next instruction after 'tgl', even if it has 'tgl'd itself to 'inc'\n",
     "\n",
     "# Instructions are followed in order from the beginning until no more remain; use i to track progress through the list\n",
     "def assemble(reg):\n",
@@ -71,7 +76,7 @@
     "            else:\n",
     "                c2 = int(c[2])\n",
     "            \n",
-    "            if not c1  == 0:\n",
+    "            if not c1 == 0:\n",
     "                i += c2\n",
     "            else:\n",
     "                i += 1\n",
@@ -96,11 +101,10 @@
     "                if 'jnz' in ins:\n",
     "                    m = ins.replace('jnz', 'cpy')\n",
     "\n",
-    "                commands[i+n] = m\n",
+    "                commands[i + n] = m\n",
     "           \n",
     "            i += 1\n",
-    "        \n",
-    "#         print(commands)\n",
+    "\n",
     "    return reg['a']"
    ]
   },
@@ -219,27 +223,50 @@
     }
    ],
    "source": [
+    "# by inspection, the result is factorial(a) + 85*76\n",
+    "p1 = {'a': 8, 'b': 0, 'c': 0, 'd': 0}\n",
     "assemble(p1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'a': 11500, 'b': 1, 'c': 0, 'd': 0}"
+       "11500"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# the result is factorial(a) + 85*76"
+    "import math\n",
+    "math.factorial(7) + 85*76"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "479008060"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "math.factorial(12) + 85*76"
    ]
   },
   {
