--- a/input_2016/day24.ipynb
+++ b/input_2016/day24.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,50 +95,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{0: (5, 135),\n",
-       " 3: (7, 17),\n",
-       " 1: (15, 139),\n",
-       " 2: (21, 1),\n",
-       " 7: (25, 159),\n",
-       " 4: (33, 23),\n",
-       " 6: (41, 175),\n",
-       " 5: (43, 37)}"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "goals"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for x in g:\n",
-    "    for y in g:\n",
-    "        if pd.isna(distances.loc[x, y]):\n",
-    "            visited = set([goals[x]])\n",
-    "            goal = goals[y]\n",
-    "            d = 0\n",
-    "            frontier = [goals[x]]\n",
-    "            \n",
-    "            while not isinstance(frontier, int):\n",
-    "                frontier = pathfind(frontier)\n",
-    "            \n",
-    "            distances.loc[x, y] = frontier\n",
-    "            distances.loc[y, x] = frontier\n",
+    "for (x, y) in itertools.combinations(g, 2):\n",
+    "    if pd.isna(distances.loc[x, y]):\n",
+    "        visited = set([goals[x]])\n",
+    "        goal = goals[y]\n",
+    "        d = 0\n",
+    "        frontier = [goals[x]]\n",
+    "\n",
+    "        while not isinstance(frontier, int):\n",
+    "            frontier = pathfind(frontier)\n",
+    "\n",
+    "        distances.loc[x, y] = frontier\n",
+    "        distances.loc[y, x] = frontier\n",
     "#             print(x, y, frontier)"
    ]
   },
@@ -181,7 +153,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>26</td>\n",
        "      <td>206</td>\n",
        "      <td>184</td>\n",
@@ -193,7 +165,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>26</td>\n",
-       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>216</td>\n",
        "      <td>194</td>\n",
        "      <td>190</td>\n",
@@ -205,7 +177,7 @@
        "      <th>2</th>\n",
        "      <td>206</td>\n",
        "      <td>216</td>\n",
-       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>34</td>\n",
        "      <td>62</td>\n",
        "      <td>98</td>\n",
@@ -217,7 +189,7 @@
        "      <td>184</td>\n",
        "      <td>194</td>\n",
        "      <td>34</td>\n",
-       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>48</td>\n",
        "      <td>80</td>\n",
        "      <td>268</td>\n",
@@ -229,7 +201,7 @@
        "      <td>190</td>\n",
        "      <td>62</td>\n",
        "      <td>48</td>\n",
-       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>44</td>\n",
        "      <td>264</td>\n",
        "      <td>224</td>\n",
@@ -241,7 +213,7 @@
        "      <td>98</td>\n",
        "      <td>80</td>\n",
        "      <td>44</td>\n",
-       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>240</td>\n",
        "      <td>204</td>\n",
        "    </tr>\n",
@@ -253,7 +225,7 @@
        "      <td>268</td>\n",
        "      <td>264</td>\n",
        "      <td>240</td>\n",
-       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>68</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -265,7 +237,7 @@
        "      <td>224</td>\n",
        "      <td>204</td>\n",
        "      <td>68</td>\n",
-       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -273,14 +245,14 @@
       ],
       "text/plain": [
        "     0    1    2    3    4    5    6    7\n",
-       "0    0   26  206  184  180  160   96   60\n",
-       "1   26    0  216  194  190  170   98   58\n",
-       "2  206  216    0   34   62   98  290  250\n",
-       "3  184  194   34    0   48   80  268  228\n",
-       "4  180  190   62   48    0   44  264  224\n",
-       "5  160  170   98   80   44    0  240  204\n",
-       "6   96   98  290  268  264  240    0   68\n",
-       "7   60   58  250  228  224  204   68    0"
+       "0  NaN   26  206  184  180  160   96   60\n",
+       "1   26  NaN  216  194  190  170   98   58\n",
+       "2  206  216  NaN   34   62   98  290  250\n",
+       "3  184  194   34  NaN   48   80  268  228\n",
+       "4  180  190   62   48  NaN   44  264  224\n",
+       "5  160  170   98   80   44  NaN  240  204\n",
+       "6   96   98  290  268  264  240  NaN   68\n",
+       "7   60   58  250  228  224  204   68  NaN"
       ]
      },
      "execution_count": 21,
