--- a/input_2016/day25.ipynb
+++ b/input_2016/day25.ipynb
@@ -15,6 +15,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# p1 = {'a': 0, 'b': 0, 'c': 0, 'd': 0}\n",
+    "# commands = [\"cpy 2 a\",\"tgl a\",\"tgl a\",\"tgl a\",\"cpy 1 a\",\"dec a\",\"dec a\"]\n",
+    "commands = input('day25.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 49,
    "metadata": {},
    "outputs": [],
@@ -24,13 +35,14 @@
     "# 'inc x' increases the value of register x by one.\n",
     "# 'dec x' decreases the value of register x by one.\n",
     "# 'jnz x y' jumps to an instruction y away (positive means forward; negative means backward), but only if x is not zero.\n",
-    "\n",
+    "# 'output x' transmits x from the antenna\n",
     "\n",
     "# Instructions are followed in order from the beginning until no more remain; use i to track progress through the list\n",
     "def assemble(reg):\n",
     "    i = 0\n",
     "    s = []\n",
-    "\n",
+    "    \n",
+    "    # Collect the signal in s until it has 100 samples\n",
     "    while len(s) < 100:\n",
     "        c = commands[i].split(' ')\n",
     "        \n",
@@ -60,34 +72,10 @@
     "            else:\n",
     "                c2 = int(c[2])\n",
     "            \n",
-    "            if not c1  == 0:\n",
+    "            if not c1 == 0:\n",
     "                i += c2\n",
     "            else:\n",
     "                i += 1\n",
-    "\n",
-    "#         if c[0] == 'tgl':\n",
-    "#             if c[1] in reg.keys():\n",
-    "#                 n = reg[c[1]]\n",
-    "#             else:\n",
-    "#                 n = int(c[1])\n",
-    "            \n",
-    "#             if i + n < len(commands):\n",
-    "#                 ins = commands[i + n]\n",
-    "            \n",
-    "#                 if 'inc' in ins:\n",
-    "#                     m = ins.replace('inc', 'dec')\n",
-    "#                 if 'dec' in ins:\n",
-    "#                     m = ins.replace('dec', 'inc')\n",
-    "#                 if 'tgl' in ins:\n",
-    "#                     m = ins.replace('tgl', 'inc')\n",
-    "#                 if 'cpy' in ins:\n",
-    "#                     m = ins.replace('cpy', 'jnz')\n",
-    "#                 if 'jnz' in ins:\n",
-    "#                     m = ins.replace('jnz', 'cpy')\n",
-    "\n",
-    "#                 commands[i+n] = m\n",
-    "           \n",
-    "#             i += 1\n",
     "        \n",
     "        if c[0] == 'out':\n",
     "            if c[1] in reg.keys():\n",
@@ -96,22 +84,8 @@
     "                n = int(c[1])\n",
     "            s.append(n)\n",
     "            i += 1\n",
-    "        \n",
-    "#         if x % 100 == 0:\n",
-    "#             print(reg)\n",
-    "#         x += 1\n",
+    "\n",
     "    return s"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# p1 = {'a': 0, 'b': 0, 'c': 0, 'd': 0}\n",
-    "# commands = [\"cpy 2 a\",\"tgl a\",\"tgl a\",\"tgl a\",\"cpy 1 a\",\"dec a\",\"dec a\"]\n",
-    "commands = input('day25.txt')"
    ]
   },
   {
@@ -128,6 +102,7 @@
     }
    ],
    "source": [
+    "# Test a range of initial values until you find the right one\n",
     "for x in range(500):\n",
     "    p = {'a': x, 'b': 0, 'c': 0, 'd': 0}\n",
     "    signal = assemble(p)\n",
@@ -153,6 +128,8 @@
     }
    ],
    "source": [
+    "# A fledgling attempt to factor the assembly code into loops / expressions\n",
+    "\n",
     "# cpy a d\n",
     "# cpy 7 c\n",
     "# cpy 365 b\n",
