filled in some 2018 gaps, started 2019

--- a/input_2018/scratchpad.ipynb
+++ b/input_2018/scratchpad.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,73 +15,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import string"
+    "p.replace(\"a\", \"\").replace(\"A\", \"\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# boxes = [\"abcdef\", \"bababc\", \"abbcde\", \"abcccd\", \"aabcdd\", \"abcdee\", \"ababab\"]\n",
-    "# boxes = [\"abcde\", \"fghij\", \"klmno\", \"pqrst\", \"fguij\", \"axcye\", \"wvxyz\"]\n",
-    "boxes = input('day2.txt')"
+    "# p = \"dabAcCaCBAcCcaDA\"\n",
+    "p = input('day5.txt')[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "triples = []\n",
-    "doubles = []"
+    "x = set(list(p.lower()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for b in boxes:\n",
-    "    for l in string.ascii_lowercase:\n",
-    "        if b.count(l) == 3:\n",
-    "            triples.append(b)\n",
-    "        if b.count(l) == 2:\n",
-    "            doubles.append(b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "prtkqyluiusocwvaezjmhmfgx\n",
-      "prtkqyluiusocwvaezjmhmfgx\n"
-     ]
-    }
-   ],
-   "source": [
-    "for b in boxes:\n",
-    "    for c in boxes:\n",
-    "        m = 0\n",
-    "        for i, j in enumerate(b):\n",
-    "            if j != c[i]:\n",
-    "                m += 1\n",
-    "                x = b.replace(j, '')\n",
+    "def react(p):\n",
+    "    done = False\n",
+    "    \n",
+    "    while not done:\n",
+    "        count = len(p)\n",
+    "        for y in x:\n",
+    "            a = y+y.upper()\n",
+    "            if a in p or a[::-1] in p:\n",
+    "                p = p.replace(a, \"\").replace(a[::-1], \"\")\n",
     "        \n",
-    "        if m == 1:\n",
-    "            print(x)"
+    "        if len(p) == count:\n",
+    "            done = True\n",
+    "    \n",
+    "    return p"
    ]
   },
   {
@@ -90,7 +69,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(set(triples)) * len(set(doubles))"
+    "tally = {}\n",
+    "for y in x:\n",
+    "    q = p.replace(y, \"\").replace(y.upper(), \"\")\n",
+    "    tally[y] = len(react(q))"
    ]
   },
   {
@@ -99,7 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "triples"
+    "min(tally.values())"
    ]
   },
   {
@@ -108,8 +90,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "boxes[1].count()"
+    "len(p)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.all(fabric[5:7,5:7] == 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for x in parsed:\n",
+    "    a, b, c, d = parsed[x]\n",
+    "    if np.all(fabric[a:b, c:d] == 1):\n",
+    "        print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
