--- a/input_2019/scratchpad.ipynb
+++ b/input_2019/scratchpad.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,100 +15,196 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
-    "example = \"COM)B,B)C,C)D,D)E,E)F,B)G,G)H,D)I,E)J,J)K,K)L\".split(\",\")"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = (-1, 2, 3)\n",
+    "data = '123456789012'\n",
+    "# d = (-1, 2, 2)\n",
+    "# data = '0222112222120000'\n",
+    "# d = (-1, 6, 25)\n",
+    "# data = input('day8.txt')[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = np.reshape(np.array(list(map(int, list(data)))), d)\n",
+    "c = -1\n",
+    "m = 0\n",
+    "for x, y in enumerate(i):\n",
+    "    nz = np.count_nonzero(y)\n",
+    "    if nz > m:\n",
+    "        m = nz\n",
+    "        c = x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "layer = i[c]\n",
+    "ones = layer[np.equal(1, layer)]\n",
+    "twos = layer[np.equal(2, layer)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(ones) * len(twos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = []\n",
+    "for x in range(d[1]):\n",
+    "    for y in range(d[2]):\n",
+    "        z = i.take([x][0], axis=1).take(y, axis=1)\n",
+    "        for v in z:\n",
+    "            if v == 0 or v == 1:\n",
+    "                result.append(v)\n",
+    "                break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "cannot reshape array of size 3 into shape (2,3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-144-c305cc4fa277>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<__array_function__ internals>\u001b[0m in \u001b[0;36mreshape\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+      "\u001b[0;32m~/Library/Python/3.6/lib/python/site-packages/numpy/core/fromnumeric.py\u001b[0m in \u001b[0;36mreshape\u001b[0;34m(a, newshape, order)\u001b[0m\n\u001b[1;32m    299\u001b[0m            [5, 6]])\n\u001b[1;32m    300\u001b[0m     \"\"\"\n\u001b[0;32m--> 301\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0m_wrapfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'reshape'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnewshape\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0morder\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0morder\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    302\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    303\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Library/Python/3.6/lib/python/site-packages/numpy/core/fromnumeric.py\u001b[0m in \u001b[0;36m_wrapfunc\u001b[0;34m(obj, method, *args, **kwds)\u001b[0m\n\u001b[1;32m     59\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     60\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 61\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mbound\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     62\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     63\u001b[0m         \u001b[0;31m# A TypeError occurs if the object does have such a method in its\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: cannot reshape array of size 3 into shape (2,3)"
+     ]
+    }
+   ],
+   "source": [
+    "r = np.array(result)\n",
+    "r = np.reshape(r, d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['COM']\n",
-      "[['B', ['COM']]]\n",
-      "[['B', ['COM']], ['B']]\n",
-      "[['B', ['COM']], ['B'], ['C']]\n",
-      "[['B', ['COM']], ['B'], ['C'], ['D']]\n",
-      "[['B', ['COM']], ['B'], ['C'], ['D'], ['E']]\n",
-      "[['B', ['COM']], ['B'], ['C'], ['D'], ['E'], ['B']]\n",
-      "[['B', ['COM']], ['B'], ['C'], ['D'], ['E'], ['B'], ['G']]\n",
-      "[['B', ['COM']], ['B'], ['C'], ['D'], ['E'], ['B'], ['G'], ['D']]\n",
-      "[['B', ['COM']], ['B'], ['C'], ['D'], ['E'], ['B'], ['G'], ['D'], ['E']]\n",
-      "[['B', ['COM']], ['B'], ['C'], ['D'], ['E'], ['B'], ['G'], ['D'], ['E'], ['J']]\n",
-      "[['B', ['COM']], ['B'], ['C'], ['D'], ['E'], ['B'], ['G'], ['D'], ['E'], ['J'], ['K']]\n"
+      "[[0 1]\n",
+      " [1 0]]\n"
      ]
     }
    ],
    "source": [
-    "orbits = [['COM']]\n",
-    "for o in orbits:\n",
-    "    neworbits = []\n",
-    "#     print(o)\n",
-    "    for e in example:\n",
-    "        a, b = e.split(')')\n",
-    "#     print(a, b)\n",
-    "        if a == o[0]:\n",
-    "            neworbits.append([b] + [o])\n",
-    "            print(o)\n",
-    "        else:\n",
-    "            neworbits.append([a])\n",
-    "        print(neworbits)\n",
-    "    break"
+    "for x in r:\n",
+    "    print(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['COM)B', 'B)C', 'C)D', 'D)E', 'E)F', 'B)G', 'G)H', 'D)I', 'E)J', 'J)K', 'K)L']"
+       "array([[[1, 2, 3],\n",
+       "        [4, 5, 6]],\n",
+       "\n",
+       "       [[7, 8, 9],\n",
+       "        [0, 1, 2]]])"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "example"
+    "i"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['COM'], ['B'], ['G'], ['D'], ['E'], ['J'], ['K']]"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "orbits"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "q = np.array(list(map(int, list('0222112222120000'))))\n",
+    "d = (-1, 2, 2)\n",
+    "q = np.reshape(q, d)\n",
+    "result = []\n",
+    "for x in range(d[1]):\n",
+    "    for y in range(d[2]):\n",
+    "        z = q.take([x][0], axis=1).take(y, axis=1)\n",
+    "        for v in z:\n",
+    "            if v == 0 or v == 1:\n",
+    "                result.append(v)\n",
+    "                break"
+   ]
   }
  ],
  "metadata": {
